# NoteKeeper

./: .gitignore  README.md  main.py  noteMethods.py  pyproject.toml  supportMethods.py  userNotes.json
.github/workflows/: build.yml
